spacing fix

--- a/src/app/Landing/landing/landing.component.css
+++ b/src/app/Landing/landing/landing.component.css
@@ -16,3 +16,7 @@
   padding-top: 1.5em;
   padding-bottom: 1.5em;
 }
+
+.quotes {
+  margin-bottom: 1em;
+}
